--- a/style.css
+++ b/style.css
@@ -800,6 +800,9 @@
     #section-4{
         height: calc(3000px - 140vw);
     }
+    #section-6{
+        height: 4000px;
+    }
     #section-5{
         height: calc(3000px - 140vw);
     }
@@ -833,6 +836,7 @@
     }
     .content-container{
         width: 180px;
+        height: 400px;
     }
     .content-container h2{
         font-size: 18px;
@@ -842,5 +846,15 @@
     }
     .content-container h4{
         font-size: 12px;
+    }
+    #container-1{
+        height: 850px;
+    }
+    #container-2{
+        top: 1400px;
+        height: 2600px;
+    }
+    #heading-3{
+        top: 1250px;
     }
 }
